fix card number input tag(add placeholder, text-align: center)

--- a/client/src/styles/SubmitPage.css
+++ b/client/src/styles/SubmitPage.css
@@ -47,3 +47,9 @@ h3 {
 	justify-content: center;
 	align-items: center;
 }
+
+input::-webkit-input-placeholder { text-align: center; }
+input::-moz-placeholder { text-align: center; }
+input:-ms-input-placeholder { text-align: center; }
+input:-moz-placeholder { text-align: center; }
+input::placeholder { text-align: center; }
